view: fix invisible scroll bars
There's a meta tag to hint to the browser that the page is dark,
which causes it to draw scroll bars in a light color. But that hint
wasn't working on content loaded with AJAX, after the initial render.
Who knows why.

Setting the hint in CSS instead makes it work on the whole page,
no matter when the content was inserted into the DOM.

--- a/web/static/static/bundle.css
+++ b/web/static/static/bundle.css
@@ -2927,6 +2927,7 @@
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: none;
     text-size-adjust: none;
+    color-scheme: only dark;
   }
   body:has(.v-app),
   body:has(#full-player) {
